[package]
name = "gif_encoder"
version = "0.1.0"
edition = "2024"
description = "GIF encoder for the partymoji app"
license = "MIT"
repository = "https://github.com/MikeyBurkman/partymoji/wasm/gif_encoder"
authors.workspace = true
homepage.workspace = true

[dependencies]
gif = "0.13.1"
image = { version = "0.25.6", default-features = false, features = ["gif"] }


