[package]
name = "gif_encoder"
version = "0.1.0"
edition = "2024"
description = "GIF encoder for the partymoji app"
license = "MIT"
repository = "https://github.com/MikeyBurkman/partymoji/wasm/gif_encoder"

[dependencies]
image = { version = "0.25.6", default-features = false, features = ["gif"] }
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'HtmlImageElement',
    'HtmlCanvasElement',
    'Window',
    'CanvasRenderingContext2d',
]
